# term-paper

./: FORMATTING.md  TESTER.md  flake.nix  production-db-ddl.sql  server-config.nix  test-db-ddl.sql
misc/: CLAUDE.md  FORMATTING.md  presentation.md  presentation.pptx  Пояснительная_записка_Рекламное_Агентство_Яремчук_v2.docx
nix/modules/: nginx-mgr.nix  pgschema-mgr.nix  pgschema.nix  php-mgr.nix  postgres-mgr.nix
nix/my-lib/: cat.nix  check-unit.nix  mk-script-union.nix  mk-worker-scripts.nix
php/: composer.json  project.nix
php/src/: main.php  style.css  tests.php
python/: project.nix  pyproject.toml
python/src/: main.py  scenarios.py
schemas/: test-db-ddl.sql
